--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       @keyframes kf-greenyellow {
         from {
-          color: greenyellow;
+          color: black;
         }
 
         to {
@@ -87,7 +87,7 @@
 
       @keyframes kf-blueviolet {
         from {
-          color: blueviolet;
+          color: black;
         }
 
         to {
@@ -97,7 +97,7 @@
 
       @keyframes kf-green {
         from {
-          color: green;
+          color: black;
         }
 
         to {
@@ -107,7 +107,7 @@
 
       @keyframes kf-cyan {
         from {
-          color: cyan;
+          color: black;
         }
 
         to {
@@ -117,7 +117,7 @@
 
       @keyframes kf-blue {
         from {
-          color: blue;
+          color: black;
         }
 
         to {
@@ -127,7 +127,7 @@
 
       @keyframes kf-purple {
         from {
-          color: blacl;
+          color: black;
         }
 
         to {
